--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seeds": "node seeds/index.js"
+    "seeds": "node seeds/index.js",
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "handlebars": "^4.7.3",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.6",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
