--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "handlebars-helper-equal": "^1.0.0",
+    "handlebars-helpers": "^0.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.6",
